fix img size on mobile devices

--- a/src/components/shop/item-viewer/item-viewer.scss
+++ b/src/components/shop/item-viewer/item-viewer.scss
@@ -13,7 +13,7 @@
 @include media-breakpoint-down(md) {
   .img-wrapper {
     flex-basis: 50%;
-    max-height: 100vh;
+    max-height: 50vh;
   }
   .view-item-info {
     width: 100%;
